[gd_scene load_steps=4 format=3 uid="uid://buct6l35s2wg4"]

[ext_resource type="Script" path="res://GUI/pause_menu.gd" id="1_36s4n"]
[ext_resource type="FontFile" uid="uid://q411ts3sa2ao" path="res://Assets/Borrowed/Fonts/monogram/ttf/monogram.ttf" id="2_llf44"]
[ext_resource type="AudioStream" uid="uid://d0niemwdmtw6c" path="res://Assets/Borrowed/NinjaAdventure/Sounds/Menu/Menu1.wav" id="3_41s72"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_36s4n")

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_41s72")

[node name="Resume" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -60.0
offset_right = 72.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../MainMenu")
focus_next = NodePath("../MainMenu")
theme_override_fonts/font = ExtResource("2_llf44")
text = "Resume"

[node name="MainMenu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -12.0
offset_right = 72.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Resume")
theme_override_fonts/font = ExtResource("2_llf44")
text = "Main Menu"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 36.0
offset_right = 72.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Resume")
focus_previous = NodePath("../MainMenu")
theme_override_fonts/font = ExtResource("2_llf44")
text = "Quit"

[connection signal="focus_entered" from="Resume" to="." method="_on_resume_focus_entered"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="focus_entered" from="MainMenu" to="." method="_on_main_menu_focus_entered"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="focus_entered" from="Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
